// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageSlider /> should not use a slider for only one image 1`] = `
<ImageSlider
  autoPlay={false}
  className={null}
  classNames={Object {}}
  controls={false}
  indicators={false}
  initialSlide={0}
  interval={3000}
  loop={false}
  maxIndicators={null}
  onSlideChange={[Function]}
  rebuildOnUpdate={false}
  slidesPerView={1}
  snapItems={true}
>
  <Image
    alt={null}
    animating={true}
    backgroundColor="#f2f2f2"
    className=""
    forcePlaceholder={false}
    highestResolutionLoaded={[Function]}
    key=".0"
    onError={null}
    onLoad={null}
    ratio={null}
    resolutions={
      Array [
        Object {
          "blur": 2,
          "height": 50,
          "width": 50,
        },
        Object {
          "height": 440,
          "width": 440,
        },
      ]
    }
    src={null}
    srcmap={
      Array [
        "foo/bar",
      ]
    }
    transition={null}
  >
    <div
      className="css-1oue43v "
    />
  </Image>
</ImageSlider>
`;

exports[`<ImageSlider /> should wrap each image into a Swiper.Item 1`] = `
<Swiper
  autoPlay={false}
  className={null}
  classNames={Object {}}
  controls={false}
  indicators={false}
  initialSlide={0}
  interval={3000}
  loop={false}
  maxIndicators={10}
  onSlideChange={[Function]}
  rebuildOnUpdate={true}
  slidesPerView={1}
  snapItems={true}
>
  <SwiperItem
    className={null}
    key="0"
  >
    <Image
      alt={null}
      animating={true}
      backgroundColor="#f2f2f2"
      className=""
      forcePlaceholder={false}
      highestResolutionLoaded={[Function]}
      onError={null}
      onLoad={null}
      ratio={null}
      resolutions={
        Array [
          Object {
            "blur": 2,
            "height": 50,
            "width": 50,
          },
          Object {
            "height": 440,
            "width": 440,
          },
        ]
      }
      src={null}
      srcmap={
        Array [
          "foo/bar",
        ]
      }
      transition={null}
    />
  </SwiperItem>
  <SwiperItem
    className={null}
    key="1"
  >
    <Image
      alt={null}
      animating={true}
      backgroundColor="#f2f2f2"
      className=""
      forcePlaceholder={false}
      highestResolutionLoaded={[Function]}
      onError={null}
      onLoad={null}
      ratio={null}
      resolutions={
        Array [
          Object {
            "blur": 2,
            "height": 50,
            "width": 50,
          },
          Object {
            "height": 440,
            "width": 440,
          },
        ]
      }
      src={null}
      srcmap={
        Array [
          "bar/foo",
        ]
      }
      transition={null}
    />
  </SwiperItem>
</Swiper>
`;
